views/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdeployd-service
spec:
  selector:
    app: appdeployd
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
