views/svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
spec:
  selector:
    app: web-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  clusterIP: 10.43.130.178
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 192.168.0.105
