views/svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: ps-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9090
    nodePort: 31111
    protocol: TCP
  selector:
    app: web
