views/ingress.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: my-ingress
  namespace: appdeployd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: ps-nodeport
                port:
                  number: 9090
